<resources>
    <string name="app_name">Inflight</string>
    <string name="refresh_to_view">Refresh to view Items!</string>
    <string name="hint_user">Username or Email!</string>
    <string name="hint_username">Username</string>
    <string name="hint_email">Email</string>
    <string name="hint_mobile">Phone Number</string>
    <string name="hint_password">Password</string>
    <string name="sign_in_btn">Sign In</string>
    <string name="sign_in_message">Message</string>
    <string name="sign_up_btn">Sign Up</string>
    <string name="sign_up_option_1">Don\'t have an account?</string>
    <string name="sign_up_option_2">Register now.</string>
    <string name="sign_in_option_1">Already have an account?</string>
    <string name="sign_in_option_2">Sign In.</string>
    <string name="name_tag">InFlight Mag | 2020</string>
    <string name="available">Available</string>
    <string name="airlines">Airlines</string>
    <string name="latest">Latest</string>
    <string name="issue_period">Oct-2020</string>
    <string name="magazines">Magazines</string>
    <string name="issues">Issues</string>
    <string name="title">Title</string>
    <string name="logout">Log out</string>
    <string name="publisher">Publisher</string>
    <string name="published_by">Published by: </string>
    <string name="start_read">Start Read</string>
    <string name="no_of_mags">No. of Magazines</string>
    <string name="no_of_issues">No. of Issues</string>
    <string name="subscribe">Subscribe</string>
    <string name="favourite">Favourite</string>
</resources>