<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mes.inflight_mag.ui.main.view.IssueDetail">

    <include layout="@layout/tool_bar"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/tool_lyt"
        />

    <LinearLayout
        app:layout_constraintTop_toTopOf="@id/tool_lyt"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="start"
        android:orientation="vertical"
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_marginStart="@dimen/spacing_mlarge"
        android:layout_marginEnd="@dimen/spacing_mlarge"
        android:id="@+id/issue_title_lyt"
        >
        <TextView
            android:layout_marginTop="@dimen/spacing_large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/issue_period"
            android:textColor="@color/colorAccent"
            android:textSize="15sp"
            android:id="@+id/issue_period"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/title"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            android:textStyle="bold"
            android:id="@+id/issue_title"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/published_by"
                android:textColor="@color/grey_40"
                android:textSize="15sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/publisher"
                android:textColor="@color/grey_60"
                android:textSize="18sp"
                android:textFontWeight="700"
                android:textStyle="bold"
                android:id="@+id/publisher"/>

        </LinearLayout>



    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@+id/issue_title_lyt"
        android:background="@color/grey_40"
        android:layout_marginStart="@dimen/spacing_mlarge"
        android:layout_marginEnd="@dimen/spacing_mlarge"
        android:layout_marginTop="@dimen/spacing_xsmall"

        />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/xxl_7"
        app:cardCornerRadius="6dp"
        app:cardElevation="@dimen/spacing_medium"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="@dimen/spacing_mlarge"
        android:layout_marginEnd="@dimen/spacing_mlarge"


        >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        >
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/issue_cover"
        android:src="@drawable/ic_magazine"
        android:scaleType="centerCrop"
        />
</androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
    <LinearLayout
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="@dimen/spacing_xmlarge"
        android:padding="@dimen/spacing_small"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginEnd="@dimen/spacing_large"
            >
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorAccent"
                app:tint = "@color/black"
                android:src="@drawable/ic_add"
                android:id="@+id/subscribe_btn"
                android:visibility="visible"
                android:layout_weight="3"

                />

            <TextView
                android:layout_marginTop="@dimen/spacing_small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subscribe"
                android:textColor="@color/grey_60"
                android:textSize="12sp"
                android:layout_weight="3"
                android:textAlignment="center"

                />

        </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginStart="@dimen/spacing_large"
        android:layout_marginEnd="@dimen/spacing_large"
        >
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorAccent"
            app:tint = "@color/black"
            android:src="@drawable/ic_favourite"
            android:id="@+id/add_user"
            android:visibility="visible"
            android:layout_weight="3"

            />
        <TextView
            android:layout_marginTop="@dimen/spacing_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/favourite"
            android:textColor="@color/grey_60"
            android:textSize="12sp"
            android:layout_weight="3"
            android:textAlignment="center"

            />
    </LinearLayout>



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/start_read"
            android:textColor="@color/grey_60"
            android:textSize="15sp"
            android:textStyle="bold"
            android:id="@+id/start_read"
            android:layout_weight="3"
            android:textAlignment="center"
            android:layout_marginStart="@dimen/spacing_large"
            />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>