<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mes.inflight_mag.ui.main.view.Issues">


    <include layout="@layout/tool_bar"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/tool_lyt"
        />
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/issues_swipe_refresh"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_marginTop="?attr/actionBarSize"
        app:layout_constraintTop_toBottomOf="@+id/tool_lyt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <ScrollView
            android:scrollbars="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:id="@+id/issues_content"
            android:visibility="gone"
            android:layout_marginTop="@dimen/spacing_middle"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="start"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:text="@string/latest"
                    android:textColor="@color/grey_60"
                    android:textSize="12sp"
                    android:id="@+id/latest"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:text="@string/issues"
                    android:textColor="@color/grey_60"
                    android:textSize="18sp"
                    android:textFontWeight="700"
                    android:textStyle="bold"
                    android:id="@+id/issues"/>



            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                >
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/spacing_large"
                    android:layout_height="@dimen/spacing_large"
                    android:src="@drawable/circle_stroke"
                    />
                <View
                    android:gravity="center_vertical"
                    android:layout_gravity="center_vertical"
                    android:layout_width="@dimen/xxl_2"
                    android:background="@color/grey_40"
                    android:layout_height="1dp"/>
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/spacing_large"
                    android:layout_height="@dimen/spacing_large"
                    android:src="@drawable/circle_stroke"
                    />
            </LinearLayout>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/issue_recycler_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingStart="@dimen/spacing_large"
                android:paddingEnd="@dimen/spacing_large"



                />

        </LinearLayout>

        </ScrollView>


    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <LinearLayout
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"

        android:id="@+id/issues_preview"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_mlarge"
        android:visibility="visible"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/app_name"
            android:gravity="center"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/refresh_to_view"
            android:textSize="14sp"
            android:gravity="center"
            android:layout_marginTop="@dimen/spacing_medium"
            android:id="@+id/issues_preview_msg"
            />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>