<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_sign_in"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey_5"
        tools:context="com.mes.inflight_mag.ui.main.view.SignIn">
        <View
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:background="@color/colorPrimary" />
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_magazine"
            android:layout_marginTop="50dp"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/spacing_mxlarge"
            android:layout_marginBottom="50dp"

            android:layout_marginTop="120dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="7dp"
                app:cardElevation="@dimen/spacing_medium">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_large"
                    android:layout_marginStart="@dimen/spacing_large"
                    android:layout_marginEnd="@dimen/spacing_large"
                    android:layout_marginBottom="@dimen/spacing_xxxlarge"
                    android:orientation="vertical"
                    >


                    <TextView
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|top"
                        android:layout_marginTop="@dimen/spacing_mxlarge"
                        android:layout_marginBottom="@dimen/spacing_middle"
                        android:text="@string/app_name"
                        android:textAllCaps="true"
                        android:textColor="@color/grey_60"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:id="@+id/txtViewSignIn"/>



                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center_horizontal"
                        android:layout_gravity="center_horizontal"
                        >


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_marginStart="@dimen/spacing_middle"
                            android:layout_marginEnd="@dimen/spacing_middle"
                            android:background="@drawable/rounded_white_rectangle">

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:layout_marginEnd="@dimen/spacing_middle"
                                android:layout_marginStart="8dp"
                                android:layout_marginTop="@dimen/spacing_medium"
                                android:layout_marginBottom="@dimen/spacing_medium"
                                android:background="@drawable/rounded_accent_rectangle"
                                android:gravity="center">

                                <ImageView
                                    android:layout_width="@dimen/spacing_mxlarge"
                                    android:layout_height="@dimen/spacing_mxlarge"
                                    android:src="@drawable/ic_profile"
                                    app:tint="@color/colorPrimaryDark" />


                            </LinearLayout>

                            <com.google.android.material.textfield.TextInputLayout
                                android:layout_width="0dp"
                                android:layout_weight="4"
                                android:layout_height="wrap_content"
                                android:hint="@string/hint_email"
                                android:padding="@dimen/spacing_medium"
                                android:layout_margin="@dimen/spacing_small"
                                android:id="@+id/sign_in_user_IL">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:id="@+id/sign_in_username"
                                    android:textColor="@color/grey_80"
                                    />

                            </com.google.android.material.textfield.TextInputLayout>


                        </LinearLayout>

                        <LinearLayout
                            android:layout_marginTop="@dimen/spacing_middle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_marginStart="@dimen/spacing_middle"
                            android:layout_marginEnd="@dimen/spacing_middle"
                            android:background="@drawable/rounded_white_rectangle">

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:layout_marginEnd="@dimen/spacing_middle"
                                android:layout_marginStart="8dp"
                                android:layout_marginTop="@dimen/spacing_medium"
                                android:layout_marginBottom="@dimen/spacing_medium"
                                android:background="@drawable/rounded_accent_rectangle"
                                android:gravity="center">

                                <ImageView
                                    android:layout_width="@dimen/spacing_mxlarge"
                                    android:layout_height="@dimen/spacing_mxlarge"
                                    android:src="@drawable/ic_password"
                                    app:tint="@color/colorPrimaryDark" />


                            </LinearLayout>

                            <com.google.android.material.textfield.TextInputLayout
                                android:layout_width="0dp"
                                android:layout_weight="4"
                                android:layout_height="wrap_content"
                                android:hint="@string/hint_password"
                                android:padding="@dimen/spacing_medium"
                                android:layout_margin="@dimen/spacing_small"
                                android:id="@+id/sign_in_password_IL"
                                >

                                <com.google.android.material.textfield.TextInputEditText
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:id="@+id/sign_in_password"
                                    android:inputType="textPassword"
                                    android:textColor="@color/grey_80"
                                    />

                            </com.google.android.material.textfield.TextInputLayout>


                        </LinearLayout>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sign_in_message"
                            android:layout_marginTop="@dimen/spacing_middle"
                            android:textColor="@color/red_400"
                            android:id="@+id/sign_in_message"
                            style="@style/TextAppearance.Compat.Notification.Title"
                            />

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/rounded_color_primary_rectangle"
                            android:layout_marginTop="@dimen/spacing_middle"
                            android:text="@string/sign_in_btn"
                            android:textColor="@color/white"
                            android:id="@+id/sign_in_btn"
                            />


                        <ProgressBar
                            android:layout_marginTop="@dimen/spacing_mlarge"
                            android:id="@+id/sign_in_loader"
                            style="?android:attr/progressBarStyleHorizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/spacing_mlarge"
                            android:layout_marginEnd="@dimen/spacing_mlarge"
                            android:visibility="gone"
                            android:indeterminate="true"
                            />



                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:id="@+id/go_to_sign_up"
                            >
                            <TextView

                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/sign_up_option_1"
                                android:textColor="@color/grey_40"
                                android:layout_marginTop="@dimen/spacing_middle"
                                />
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/sign_up_option_2"
                                android:textColor="@color/grey_60"
                                android:textStyle="bold"
                                android:layout_marginTop="@dimen/spacing_middle"
                                android:layout_marginStart="@dimen/spacing_small"
                                />
                        </androidx.appcompat.widget.LinearLayoutCompat>




                    </LinearLayout>





                </androidx.appcompat.widget.LinearLayoutCompat>





            </androidx.cardview.widget.CardView>
        </ScrollView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:text="@string/name_tag"
            android:textAlignment="center"
            android:textColor="@color/grey_40"
            android:textSize="12sp"
            android:layout_marginStart="@dimen/spacing_large"
            android:layout_marginEnd="@dimen/spacing_large"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_marginBottom="@dimen/spacing_mlarge"
            />

</RelativeLayout>